# lattice

./: .gitignore  .pre-commit-config.yaml  BENCH.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  bench.csv  typos.toml
benches/: core_benches.rs
crates/lattice-bin/: Cargo.toml
crates/lattice-bin/src/: main.rs
crates/lattice-board/: Cargo.toml  README.md
crates/lattice-board/benches/: core_benches.rs
crates/lattice-board/src/: bitboard.rs  board.rs  lib.rs  move.rs  movegen.rs  movelist.rs  pesto.rs  piece.rs  zobrist.rs
crates/lattice-engine/: Cargo.toml  README.md
crates/lattice-engine/src/: bench.rs  eval.rs  lib.rs  search.rs  tt.rs
crates/lattice-uci/: Cargo.toml  README.md
crates/lattice-uci/examples/: basic-engine.rs
crates/lattice-uci/src/: lib.rs
docs/: book.toml  nnue-plan.md
docs/src/: SUMMARY.md  features.md  index.md  sprt-results.md
src/: lib.rs  main.rs  uci.rs
src/board/: board.rs  lattice-768x256-v1-20260701.nnue  magic.rs  mod.rs  move.rs  movegen.rs  movelist.rs  nnue.rs  pesto.rs  piece.rs  square.rs  zobrist.rs
src/engine/: bench.rs  eval.rs  mod.rs  search.rs  tt.rs
tools/: README.md  gen-benchcsv.sh  gen-ledgers.sh  match.sh  sprt.sh  stamp-bench.sh
tools/convert/: Cargo.toml
tools/convert/src/: main.rs
tools/trainer/: Cargo.toml
tools/trainer/src/: main.rs
