[package]
name = "lattice"
version = "0.0.0"
authors = ["hxyulin <hxyulin@proton.me>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/hxyulin/lattice"

[features]
# NNUE evaluation (loads the embedded network), on by default: this branch is the
# NNUE engine, and `make`/bench build it so the OpenBench node signature matches.
# Build the hand-crafted-eval engine with `cargo build --no-default-features`.
default = ["nnue"]
nnue = []

[dependencies]
nonmax = "0.5"
thiserror = "2"
bstr = "1"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "lattice"
path = "src/main.rs"

[[bench]]
name = "core_benches"
harness = false

[lints.rust]
missing_docs = "warn"

[lints.clippy]
all = "warn"
