[package]
name = "lattice"
version = "0.0.0"
authors = ["hxyulin <hxyulin@proton.me>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/hxyulin/lattice"

[dependencies]
nonmax = "0.5"
bstr = "1"
thiserror = "2"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "lattice"
path = "src/main.rs"

[[bench]]
name = "core_benches"
harness = false

[lints.rust]
missing_docs = "warn"

[lints.clippy]
all = "warn"
