[package]
name = "lattice-bin"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lattice-board.workspace = true
lattice-engine.workspace = true
lattice-uci.workspace = true

[lints.rust]
missing_docs = "warn"

[lints.clippy]
all = "warn"

[[bin]]
name = "lattice"
path = "src/main.rs"
